--- a/_includes/blog/footer.html
+++ b/_includes/blog/footer.html
@@ -5,7 +5,7 @@
         </aside>
         <footer class="site-info">
             <p>© {{ site.title }}2017版</p>
-            <p>欢迎<a href="http://jekyllrb.com/">光临</a> & <a href="https://github.com/kitian616/jekyll-TeXt-theme">jianweibolg</a>.</p>
+            <p>欢迎<a href="#">光临</a> & <a href="#">jianweibolg</a>.</p>
             </p>
         </footer>
     </div>
