--- a/_layouts/all.html
+++ b/_layouts/all.html
@@ -64,7 +64,7 @@ title: 全部文章
             $('.article-tag.tag-show-all').focus();
             $('.post-block').show();
         } else {
-            $('.page-heading').text('Tag: ' + tag);
+            $('.page-heading').text('文章分类: ' + tag);
             $('.post-block').not('.tag-' + tag).hide();
             $('.article-tag').filter('.tag-' + tag).focus();
             $('.post-block').filter('.tag-' + tag).show();
