--- a/_includes/blog/article-data.html
+++ b/_includes/blog/article-data.html
@@ -23,11 +23,11 @@
 	{% endif %}
     <div class="other-wrapper">
         <div class="view-wrapper clearfix">
-            <span class="article-view" id="post-key-{{ cur_page.key }}"></span>
-            
+            <span class="article-view" id="post-key-{{ cur_page.key }}">发布时间</span>
+            |
         </div>
         <div class="date-wrapper">
-            {% if post %}                
+            {% if post %}                          
                 <span class="article-meta">{{ post.date | date: "%Y年%m月%d日" }}</span>
             {% elsif page %}
                 <time class="article-meta" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
