--- a/_includes/blog/article-data.html
+++ b/_includes/blog/article-data.html
@@ -23,7 +23,7 @@
 	{% endif %}
     <div class="other-wrapper">
         <div class="view-wrapper clearfix">
-            <span class="article-view" id="post-key-{{ cur_page.key }}">发布时间</span>
+            <span class="article-view" id="post-key-{{ cur_page.key }}">浏览量<span data-hk-page="current"> - </span></span>
             |
         </div>
         <div class="date-wrapper">
