--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -147,4 +147,12 @@ layout: blog-base
             'container': '.js-article-content',
         });
     });
+
+/*加入音乐*/
+document.addEventListener('DOMContentLoaded', function () {function audioAutoPlay() { 
+var audio = document.getElementById('bg-music');           
+ audio.play();        
+ document.addEventListener("WeixinJSBridgeReady", function () { 
+ audio.play(); }, false);  }  audioAutoPlay();});
+ /*加入音乐*/
 </script>
