--- a/_sass/base/_links.scss
+++ b/_sass/base/_links.scss
@@ -32,11 +32,15 @@ a {
 
 .round-button {
     @extend %cursor-pointer;
-    display: flex;
+ 
+	display:block; 
+	text-align:center;
+	
+	
     align-items: center;
     justify-content: center;
     font-weight: $bold-font-weight;
-    line-height: 1;
+    line-height: 1.2;
     height: 2em;
     width: 2em;
     box-sizing: border-box;
